operator/pkg/gateway-api/testdata/gateway/hostNetwork-enabled-no-l4-listeners/output/udproute-udp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: UDPRoute
metadata:
  name: udp-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: host-networking
      namespace: gateway-conformance-infra
  rules:
    - backendRefs:
        - name: udp-backend-host-networking
          port: 53
status:
  parents:
    - conditions:
        - message: "UDPRoute is not supported: Gateway API Host Network mode is enabled"
          reason: UnsupportedValue
          status: "False"
          type: Accepted
          lastTransitionTime: "2026-02-25T00:00:00Z"
        - message: "Backend references were not evaluated because this route type is not supported: Gateway API Host Network mode is enabled"
          reason: Pending
          status: "Unknown"
          type: ResolvedRefs
          lastTransitionTime: "2026-02-28T00:00:00Z"
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: host-networking
        namespace: gateway-conformance-infra
